--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 openai
 utils
+anaconda-cloud-auth
 Pydantic==2.6.2
 Cython
 blosc2==2.0.0
 crewai==0.28.8
 crewai_tools==0.1.6
 langchain_community==0.0.29
+nbconvert
+pyppeteer
